[tool.poetry]
name = "xfds"
version = "0.2.0"
description = "FDS Runner using openbcl/fds-dockerfiles"
license = "MIT"
authors = ["Brian Cohan <briancohan@pbd.tools>"]
readme = "README.md"
homepage = "https://github.com/pbdtools/xfds"
repository = "https://github.com/pbdtools/xfds"
documentation = "https://github.com/pbdtools/xfds"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^11.2.0"
requests = "^2.27.1"
Markdown = "^3.3.6"
typer = "^0.4.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "7.0"
mypy = "^0.931"
black = "^21.12b0"
pytest-datadir = "^1.3.1"
pre-commit = "^2.16.0"
tox = "^3.24.5"
coverage = "^6.3.1"
pytest-cov = "^3.0.0"
flake8-black = "^0.2.4"
flake8-bugbear = "^22.1.11"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.7.0"
safety = "^1.10.3"
codecov = "^2.1.12"
nox-poetry = "^0.9.0"
python-slugify = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xfds = "xfds.cli:app"

[tool.coverage.run]
source = ["src/xfds"]

[tool.coverage.report]
show_missing = true
